--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=productsearch
 
 # PostgreSQL Database configuration
-spring.datasource.url=jdbc:postgresql://postgres:5432/productdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5430/demoDB
+spring.datasource.username=usr
+spring.datasource.password=pwd
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 # Liquibase configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.user=usr
+spring.liquibase.password=pwd
+spring.liquibase.enabled=false
 
 # Serve static files from /public directory
 spring.mvc.static-path-pattern=/public/**
