Добавил Docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.liquibase.enabled=false
 # Serve static files from /public directory
 spring.mvc.static-path-pattern=/public/**
 spring.web.resources.static-locations=classpath:/public/
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
