--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: product-search
     spec:
       containers:
-        - name: product-search
+        - name: products.txt-search
           image: victor2023victorovich/product-search:latest
           ports:
             - containerPort: 8080
